fix font letter spacing

--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -24,6 +24,7 @@
 body {
   background-color: $light-green;
   font-family: 'League Spartan Bold';
+  letter-spacing: 0.01rem;
   color: $dark-green;
   padding-bottom: 180px;
   background-color: $light-green;
